Add Image, Description, Ingredients, Recipe to strawberry_matcha.html

--- a/recipes/strawberry_matcha.html
+++ b/recipes/strawberry_matcha.html
@@ -8,5 +8,57 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Strawberry Matcha</h1>
+    <img src="../images/strawberry_matcha.jpg" alt="A strawberry matcha latte" width=300 height=370>
+
+    <h2>Description</h2>
+    <p>A strawberry matcha latte is exactly as it sounds: a delicious fusion of sweet strawberries and earthy matcha. Perfect over ice for a refreshing yet cozy treat :&gt</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Strawberry Layer</li>
+        <ul>
+            <li>4–5 fresh strawberries (or 1/3 cup frozen, thawed)</li>
+            <li>1 tbsp honey or sugar (adjust to taste)</li>
+            <li>1 tbsp water (optional, for blending)</li>
+        </ul>
+        <li>Matcha Layer</li>
+        <ul>
+            <li>1 tsp matcha green tea powder (ceremonial grade preferred)</li>
+            <li>1–2 tbsp hot water (not boiling, ~175°F / 80°C)</li>
+        </ul>
+        <li>Milk Layer</li>
+        <ul>
+            <li>3/4 cup milk of choice (oat, almond, dairy, soy — all work)</li>
+            <li>Ice cubes (if serving cold)</li>
+        </ul>
+    </ul>
+
+    <h2>Recipe</h2>
+    <ol>
+        <li>Make the Strawberry Purée:</li>
+        <ul>
+            <li>In a small blender or bowl, combine strawberries, honey/sugar, and water.</li>
+            <li>Blend or mash until smooth and syrupy.</li>
+            <li>Pour into the bottom of your glass.</li>
+        </ul>   
+        <li>Whisk the Matcha:</li>
+        <ul>
+            <li>Sift the matcha powder into a small bowl.</li>
+            <li>Add hot water and whisk with a bamboo whisk (chasen) or small frother until frothy and smooth.</li>
+        </ul>
+        <li>Assemble the Drink:</li>
+        <ul>
+            <li>Add ice over the strawberry layer if making an iced version.</li>
+            <li>Slowly pour in the milk to create a white middle layer.</li>
+            <li>Gently pour the whisked matcha over the back of a spoon to float it on top.</li>
+        </ul>
+        <li>Serve:</li>
+        <ul>
+            <li> Stir before drinking for the perfect blend of flavors.</li>
+            <li>Optional: Top with whipped cream or a sprinkle of crushed freeze-dried strawberries for flair.</li>
+        </ul>
+        </ol>
+
+        <p>Note: Ingredients and Recipe written by ChatGPT</p>
 </body>
 </html>
