Edit to Description

--- a/recipes/strawberry_matcha.html
+++ b/recipes/strawberry_matcha.html
@@ -11,7 +11,7 @@
     <img src="../images/strawberry_matcha.jpg" alt="A strawberry matcha latte" width=300 height=370>
 
     <h2>Description</h2>
-    <p>A strawberry matcha latte is exactly as it sounds: a delicious fusion of sweet strawberries and earthy matcha. Perfect over ice for a refreshing yet cozy treat :&gt</p>
+    <p>A strawberry matcha latte is exactly as it sounds: a delicious fusion of sweet strawberries and earthy matcha! Perfect over ice for a refreshing yet cozy treat :&gt</p>
 
     <h2>Ingredients</h2>
     <ul>
