Added sesame and honey_lavender to recipes in Home

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/strawberry_matcha.html">Strawberry Matcha</a>
+    <ul>
+        <li><a href="recipes/strawberry_matcha.html">Strawberry Matcha</a></li>
+        <li><a href="recipes/sesame_matcha.html">Sesame Matcha</a></li>
+       <li><a href="recipes/honey_lavender.html">Honey Lavender Matcha</a></li>
+    </ul>
 </body>
 </html>
