Add Image and page outline to sesame_matcha.html

--- a/recipes/sesame_matcha.html
+++ b/recipes/sesame_matcha.html
@@ -6,6 +6,12 @@
     <title>Sesame Matcha</title>
 </head>
 <body>
-    
+    <a href="../index.html">Home</a>
+    <h1>Sesame Matcha</h1>
+    <img src="../images/sesame_matcha.jpg" alt="A sesame matcha latte" width=550 height=370>
+
+    <h2>Description</h2>
+    <h2>Ingredients</h2>
+    <h2>Recipe</h2>
 </body>
 </html>
