Add Image and page outline to honey_lavender.html

--- a/recipes/honey_lavender.html
+++ b/recipes/honey_lavender.html
@@ -6,6 +6,12 @@
     <title>Honey Lavender Matcha</title>
 </head>
 <body>
-    
+    <a href="../index.html">Home</a>
+    <h1>Honey Lavender Matcha</h1>
+    <img src="../images/honey_lavender.jpg" alt="A honey Lavender matcha latte" width=360 height=370>
+
+    <h2>Description</h2>
+    <h2>Ingredients</h2>
+    <h2>Recipe</h2>
 </body>
 </html>
