Add recipe for sesame_matcha.html

--- a/recipes/sesame_matcha.html
+++ b/recipes/sesame_matcha.html
@@ -12,11 +12,11 @@
 
     <h2>Description</h2>
     <h2>Ingredients</h2>
+    <ul>
     <li>Black Sesame Paste</li>
         <ul>
             <li>1 tbsp black sesame paste (store-bought or homemade)</li>
-            <li>1–2 tsp honey or maple syrup (to taste)</li>
-                
+            <li>1–2 tsp honey or maple syrup (to taste)</li>    
         </ul>
         <li>Matcha Layer</li>
         <ul>
@@ -29,6 +29,31 @@
             <li>Ice cubes (if serving cold)</li>
             <li>Optional: Sesame seeds for garnish</li>
         </ul>
+    </ul>
+
     <h2>Recipe</h2>
+    <ol>
+        <li>Prepare the Sesame Paste:</li>
+        <ul>
+            <li>In your serving mug, stir the sesame paste with honey or maple syrup until smooth.</li>
+        </ul>   
+        <li>Whisk the Matcha:</li>
+        <ul>
+            <li>Sift the matcha powder into a small bowl.</li>
+            <li>Add hot water and whisk with a bamboo whisk (chasen) or small frother until frothy and smooth.</li>
+        </ul>
+        <li>Assemble the Drink:</li>
+        <ul>
+            <li>Pour the warm milk into the mug with sesame paste and stir well to combine.</li>
+            <li>Slowly pour the whisked matcha on top for a layered effect, or stir fully for a uniform green-gray blend.</li>
+            <li>Optional: sprinkle with black or white sesame seeds for garnish.</li>
+
+        </ul>
+        <li>Serve:</li>
+        <ul>
+            <li> Stir before drinking for the perfect blend of flavors.</li>
+            <li>Optional: Top with whipped cream or a sprinkle of crushed freeze-dried strawberries for flair.</li>
+        </ul>
+        </ol>
 </body>
 </html>
