Add description for sesame_matcha.html

--- a/recipes/sesame_matcha.html
+++ b/recipes/sesame_matcha.html
@@ -11,6 +11,10 @@
     <img src="../images/sesame_matcha.jpg" alt="A sesame matcha latte" width=550 height=370>
 
     <h2>Description</h2>
+    <p>Grassy matcha and toasty sesame froth into nature in a cup. 
+        Smooth and subtly sweet, it's the kind of drink that 
+        feels grounding, luxurious, and a little unexpected.</p>
+    
     <h2>Ingredients</h2>
     <ul>
     <li>Black Sesame Paste</li>
