Add Ingredients and Recipe to honey_lavender.html

--- a/recipes/honey_lavender.html
+++ b/recipes/honey_lavender.html
@@ -11,7 +11,56 @@
     <img src="../images/honey_lavender.jpg" alt="A honey Lavender matcha latte" width=360 height=370>
 
     <h2>Description</h2>
+    <p>Soothing notes of lavender are steeped into golden honey 
+        syrup and swirled into steamed milk, then layered with 
+        velvety ceremonial matcha. Floral and <em>oh so</em> dreamy </p>
+
     <h2>Ingredients</h2>
+    <ul>
+        <li>Honey Lavender Syrup</li>
+        <ul>
+            <li>1/2 cup water</li>
+            <li>>1/2 cup honey</li>
+            <li>1 tbsp dried culinary lavender buds</li>
+            <li>(makes multiple servings — store extra in fridge up to 1 week)</li>
+        </ul>
+        <li>Matcha Layer</li>
+        <ul>
+            <li>1 tsp matcha green tea powder (ceremonial grade preferred)</li>
+            <li>1–2 tbsp hot water (not boiling, ~175°F / 80°C)</li>
+        </ul>
+        <li>Milk Layer</li>
+        <ul>
+            <li>3/4 cup milk of choice (oat, almond, dairy, soy — all work)</li>
+            <li>Ice cubes (if serving cold)</li>
+        </ul>
+    </ul>
+
     <h2>Recipe</h2>
+    <ol>
+        <li>Make the Lavender Honey Syrup:</li>
+        <ul>
+            <li>In a small saucepan, combine water, honey, and lavender buds.</li>
+            <li>Bring to a gentle simmer, stir occasionally.</li>
+            <li>Turn off heat after 5 minutes and let steep for 10.</li>
+            <li>Strain out lavender buds and cool. Store extra in a jar.</li>
+        </ul>   
+        <li>Whisk the Matcha:</li>
+        <ul>
+            <li>Sift the matcha powder into a small bowl.</li>
+            <li>Add hot water and whisk with a bamboo whisk (chasen) or small frother until frothy and smooth.</li>
+        </ul>
+        <li>Assemble the Drink:</li>
+        <ul>
+            <li>Add ice over the strawberry layer if making an iced version.</li>
+            <li>Slowly pour in the milk to create a white middle layer.</li>
+            <li>Gently pour the whisked matcha over the back of a spoon to float it on top.</li>
+        </ul>
+        <li>Serve:</li>
+        <ul>
+            <li> Stir before drinking for the perfect blend of flavors.</li>
+            <li>Optional: Top with whipped cream or a sprinkle of crushed freeze-dried strawberries for flair.</li>
+        </ul>
+        </ol>
 </body>
 </html>
