Edit optional step in Recipe, honey_lavender.html

--- a/recipes/honey_lavender.html
+++ b/recipes/honey_lavender.html
@@ -58,8 +58,8 @@
         </ul>
         <li>Serve:</li>
         <ul>
-            <li> Stir before drinking for the perfect blend of flavors.</li>
-            <li>Optional: Top with whipped cream or a sprinkle of crushed freeze-dried strawberries for flair.</li>
+            <li>Stir before drinking for the perfect blend of flavors.</li>
+            <li>Optional: garnish with dried lavender or a honey swirl.</li>
         </ul>
         </ol>
 </body>
