Edit recipe in honey_lavender.html

--- a/recipes/honey_lavender.html
+++ b/recipes/honey_lavender.html
@@ -52,9 +52,9 @@
         </ul>
         <li>Assemble the Drink:</li>
         <ul>
-            <li>Add ice over the strawberry layer if making an iced version.</li>
-            <li>Slowly pour in the milk to create a white middle layer.</li>
-            <li>Gently pour the whisked matcha over the back of a spoon to float it on top.</li>
+            <li>In your mug, stir 1–2 tbsp lavender honey syrup (to taste).</li>
+            <li>Add steamed milk and stir to combine.</li>
+            <li>Top with whisked matcha for a layered look or stir to blend.</li>
         </ul>
         <li>Serve:</li>
         <ul>
