--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Matcha Latte Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Matcha Latte Recipes </h1>
+    <h3> ~ A collection of my favorite matcha latte alterations ~ </h3>
+    <h2>Recipes</h2>
     <ul>
         <li><a href="recipes/strawberry_matcha.html">Strawberry Matcha</a></li>
         <li><a href="recipes/sesame_matcha.html">Sesame Matcha</a></li>
