Edit titles for all recipes

--- a/recipes/sesame_matcha.html
+++ b/recipes/sesame_matcha.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Sesame Matcha</h1>
+    <h1>Sesame Matcha Latte</h1>
     <img src="../images/sesame_matcha.jpg" alt="A sesame matcha latte" width=550 height=370>
 
     <h2>Description</h2>
