--- a/recipes/honey_lavender.html
+++ b/recipes/honey_lavender.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Honey Lavender Matcha</h1>
+    <h1>Honey Lavender Matcha Latte</h1>
     <img src="../images/honey_lavender.jpg" alt="A honey Lavender matcha latte" width=360 height=370>
 
     <h2>Description</h2>
