--- a/recipes/strawberry_matcha.html
+++ b/recipes/strawberry_matcha.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Strawberry Matcha</h1>
+    <h1>Strawberry Matcha Latte</h1>
     <img src="../images/strawberry_matcha.jpg" alt="A strawberry matcha latte" width=300 height=370>
 
     <h2>Description</h2>
