--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matcha Latte Recipes</title>
+    <style>
+        h1 {text-align: center;}
+    </style>
 </head>
 <body>
     <h1>Matcha Latte Recipes </h1>
