Center title and description for index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Matcha Latte Recipes</title>
     <style>
         h1 {text-align: center;}
+        h3 {text-align: center;}
     </style>
 </head>
 <body>
